--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <ul class="nospace group">
           <li class="one_half first btmspace-30">
             <h6 class="heading">Рецензии</h6>
-            <p>Overwatch стала объектом пристального внимания общественности ещё на стадии открытого бета-тестирования: так, на Pornhub на 817 % увеличились поисковые запросы по игре. Особенной популярностью среди пользователей ресурса пользовалась героиня игры Трейсер
+            <p>Overwatch стала объектом пристального внимания общественности ещё на стадии открытого бета-тестирования.
 
               Релизная версия игры Overwatch получила положительные оценки игровых ресурсов. На сайте Metacritic версии для PC и Xbox One получили оценку в 91 балл из ста возможных, а версия игры для PlayStation 4 получила оценку в 90 баллов из ста возможных.</p>
           </li>
